--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="/static/dashboard.css">
 </head>
 <body>
-    <h1>This is the Dashboard</h1>
+    <h1>Main Menu</h1>
+    <div class="mainbox">
+        <div class="createroom">
+            <a href="{{url_for('creategame')}}">
+                <button>Create Room</button>
+            </a>
+        </div>
+
+        <div class="joinroom">
+            <form action = "{{url_for('joingamepost')}}" method="POST">
+                <input type="text" name="game_id" placeholder="Room Code:">
+                <button>Join Room</button>
+            </form>
+            
+             
+        </div>
+    </div>
     
 </body>
 </html>
