--- a/templates/actualgame.html
+++ b/templates/actualgame.html
@@ -9,10 +9,18 @@
 <body>
     <div class="ingredientbox">
       <h1>Ingredient List: </h1>
+      
     </div>
 
-    <div>
-      
+    <div class="ingredientlist">
+      <p> {{round.ingredients}}</p>
+    </div>
+
+    <div class="answerbox">
+      <form action="/submitanswer/{{round.id}}" method="POST">
+        <input type="text" name="answer" placeholder="Enter dish: ">
+        <button type="submit">Submit</button>
+    </form>
     </div>
 
 
