--- a/templates/actualgame.html
+++ b/templates/actualgame.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Lobby</title>
-    <link rel="stylesheet" href="/static/game.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Game Lobby</title>
+	<link rel="stylesheet" href="/static/game.css">
 </head>
 <body>
-    <div class="ingredientbox">
-      <h1>Ingredient List: </h1>
-      
-    </div>
+	<nav class="top-nav">
+		<a href="{{ url_for('dashboard') }}">Dashboard</a>
+		<a href="{{ url_for('logout') }}" class="logout-btn">Log Out</a>
+	</nav>
+	
+	<div class="ingredientbox">
+		<h1>Ingredient List: </h1>
+		
+	</div>
 
-    <div class="ingredientlist">
-      <p> {{round.ingredients}}</p>
-    </div>
+	<div class="ingredientlist">
+		<p> {{round.ingredients}}</p>
+	</div>
 
-    <div class="answerbox">
-      <form action="/submitanswer/{{round.id}}" method="POST">
-        <input type="text" name="answer" placeholder="Enter dish: ">
-        <button type="submit">Submit</button>
-    </form>
-    </div>
-
-
+	<div class="answerbox">
+		<form action="/submitanswer/{{round.id}}" method="POST">
+			<input type="text" name="answer" placeholder="Enter dish: ">
+			<button type="submit">Submit</button>
+	</form>
+	</div>
 </body>
 </html>
