--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/static/dashboard.css">
 </head>
 <body>
+    <nav class="top-nav">
+        <a href="{{ url_for('logout') }}" class="logout-btn">Log Out</a>
+    </nav>
+    
     <h1>Main Menu</h1>
     <div class="mainbox">
         <div class="createroom">
