--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/static/dashboard.css">
 </head>
 <body>
+    {% extends "base.html" %}
+    {% block title %}Dashboard{% endblock %}
+    {% block content %}
     <nav class="top-nav">
         <a href="{{ url_for('logout') }}" class="logout-btn">Log Out</a>
     </nav>
@@ -28,6 +31,6 @@
              
         </div>
     </div>
-    
+    {% endblock %}
 </body>
 </html>
