--- a/templates/gamelobby.html
+++ b/templates/gamelobby.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="/static/lobby.css">
 </head>
 <body>
+    {% extends "base.html" %}
+    {% block title %}Lobby{% endblock %}
+    {% block content %}
+
     <nav class="top-nav">
         <a href="{{ url_for('dashboard') }}">Dashboard</a>
         <a href="{{ url_for('logout') }}" class="logout-btn">Log Out</a>
@@ -35,5 +39,6 @@
             location.reload();
         }, 2000);
     </script>
+    {% endblock %}
 </body>
 </html>
