--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,10 @@
     </head>
 
     <body>
+        {% extends "base.html" %}
+        {% block title %}Login{% endblock %}
+        {% block content %}
+
         <img class="logo" src="/static/pantrypaniclogo.png">
         <div class="container">
             <div class="login-text">
@@ -29,5 +33,6 @@
             
             <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
         </div>
+        {% endblock %}
     </body>
 </html>
