--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,16 +7,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
 </head>
 <body>
+    {% extends "base.html" %}
+    {% block title %}Sign Up{% endblock %}
+    {% block content %}
+
     <div class="login-container">
         <h1>Sign Up 🍅🥦🧀</h1>
-
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="flash {{ category }}">{{ message }}</div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
 
         <form method="POST">
             <label>Username</label>
@@ -30,5 +26,6 @@
 
         <p>Already have an account? <a href="{{ url_for('login') }}">Log in</a></p>
     </div>
+    {% endblock %}
 </body>
 </html>
