--- a/static/lobby.css
+++ b/static/lobby.css
@@ -30,3 +30,27 @@ button{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+.flashes { 
+    list-style: none; padding: 0; 
+}
+
+.flashes li { 
+    margin: 0.5em 0; 
+    padding: 0.8em 1.2em; 
+    border-radius: 5px; 
+}
+
+.success { 
+    background: #d4f9d4; 
+    color: #228b22; 
+}
+
+.warning { 
+    background: #fff4e5; 
+    color: #884700; 
+}
+
+.alert  { 
+    background: #fee2e2; 
+    color: #a70000; 
+}
