--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,6 +15,9 @@
         <h1>Sign Up 🍅🥦🧀</h1>
 
         <form method="POST">
+            <label>Name</label>
+            <input type="text" name="display_name" placeholder="Display name" required>
+
             <label>Username</label>
             <input type="text" name="username" required />
 
