Fixed WInner and voting screen

--- a/templates/votingwait_votes.html
+++ b/templates/votingwait_votes.html
@@ -20,8 +20,7 @@
         height: 100%;
         width: {{ (vote_count * 100) // (player_count if player_count else 1) }}%;
         background: #ff5c5c;
-        border-radius: 999px;
-      "
+        border-radius: 999px;"
     ></div>
   </div>
 
