removed submitted text

--- a/templates/votingwait.html
+++ b/templates/votingwait.html
@@ -28,15 +28,15 @@
       "
     ></div>
   </div>
-
+<!-- 
   <div style="margin-top: 1.5rem; width: 60%;">
     {% for r in responses %}
       <div class="join-pill" style="margin-bottom: 0.6rem;">
         {{ r.round.username }} submitted
       </div>
     {% endfor %}
-  </div>
-
+  </div> -->
+  
 </div>
 <script>
   // simple polling; swap for websockets later
