Created Unique Game codes

--- a/templates/gamelobby.html
+++ b/templates/gamelobby.html
@@ -10,7 +10,7 @@
 </nav>
 
 <div class="lobbybox">
-    <h1>Lobby: #{{ game_id }}</h1>
+    <h1>Lobby: #{{ game_code }}</h1>
 </div>
 
 <div class="playlist">
