--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -36,7 +36,7 @@
 
         <div class="action-row joinroom">
             <form action = "{{ url_for('joingamepost') }}" method="POST" class="join-pill">
-                <input type="text" name="game_id" placeholder="Room Code:">
+                <input type="text" name="game_code" placeholder="Room Code:">
                 <button>Join Room</button>
             </form>
         </div>
