--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Lab 8 Project</title>
+        <title>Pantry Panic</title>
         <link rel="stylesheet" href="/static/login.css">
     </head>
 
