--- a/static/game.css
+++ b/static/game.css
@@ -1,31 +1,43 @@
 body{
-
     background-color: rgb(240, 216, 181);
 }
 
 .ingredientbox{
     width: 80%;
     height: 100px;
-    border: 5px;
-    border-color: black;
-    outline: auto;
-    border-style: solid;
-    border-radius: 3rem;
-    display: flex;
-    justify-content: center;
-    justify-items: center;
+    border-radius: 999px;
+    border: none;
+    background: #ff914d;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
     margin-left: 10%;
-
+    font-size: 1.1rem;
     margin-bottom: 10%;
+    text-align: center;
 }
 
 h1{
-    color: black;
+    color: white;
+    text-align: center;
 }
 
 .answerbox{
     text-align: center;
 }
+
+button{
+    font-size: 20px;
+    margin-top: 0.3rem auto;
+    padding: 0.5rem 1.4rem;
+    border-radius: 999px;
+    border: none;
+    background: #ff5c5c;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
+}
+
 
 .flashes { 
     list-style: none; padding: 0; 
@@ -51,3 +63,12 @@ h1{
     background: #fee2e2; 
     color: #a70000; 
 }
+
+.answerbox input[type="text"] {
+    border: none;
+    padding: 0.5rem 0.9rem;
+    font-size: 1.1rem;
+    outline: none;
+    min-width: 200px;
+    border-radius: 2rem;
+}  
