--- a/static/lobby.css
+++ b/static/lobby.css
@@ -22,12 +22,15 @@ body{
 }
 
 button{
-    padding: 10px 10px 10px;
     font-size: 50px;
-    border-radius: 3rem;
-    background-color: rgb(154, 180, 141);
-    color:rgb(50, 50, 50);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-top: 0.3rem auto;
+    padding: 0.5rem 1.4rem;
+    border-radius: 999px;
+    border: none;
+    background: #ff5c5c;
+    color: #fff;
+    font-weight: 600;
+    cursor: pointer;
 }
 
 .flashes { 
