--- a/templates/voting.html
+++ b/templates/voting.html
@@ -10,6 +10,8 @@
   <a href="{{ url_for('dashboard') }}" class="logout-btn">Leave</a>
 </nav>
 
+<link rel="stylesheet" href="/static/voting.css">
+
 <h1>Vote</h1>
 
 <div class="mainbox">
