--- a/templates/votingwait_votes.html
+++ b/templates/votingwait_votes.html
@@ -5,6 +5,7 @@
 <nav class="top-nav">
   <div class="welcome">Game {{ game_id }} • Round {{ round_num }}</div>
   <a href="{{ url_for('dashboard') }}" class="logout-btn">Leave</a>
+  <link rel="stylesheet" href="/static/votingwaitvotes.css">
 </nav>
 
 <h1>Waiting…</h1>
