--- a/templates/waitround.html
+++ b/templates/waitround.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waiting For Round To End...</title>
+    <link rel="stylesheet" href="/static/waitround.css">
 </head>
 <body>
     <h1> Waiting for Round to End...</h1>
