--- a/templates/votingwait.html
+++ b/templates/votingwait.html
@@ -8,7 +8,12 @@
     Game {{ game_id }} • Round {{ round_id }}
   </div>
   <a href="{{ url_for('dashboard') }}" class="logout-btn">Leave</a>
+  
 </nav>
+
+<head>
+    <link rel="stylesheet" href="/static/votingwait.css">
+</head>
 
 <h1>Waiting…</h1>
 
