--- a/static/winner.css
+++ b/static/winner.css
@@ -27,3 +27,14 @@ a{
     border: none;
     font-weight: 600;
 }
+
+ul{
+    font-size: 20px;
+    margin-top: 0.3rem auto;
+    padding: 0.5rem 1.4rem;
+    border-radius: 999px;
+    border: none;
+    background: #ff5c5c;
+    color: #fff;
+    font-weight: 600;
+}
