--- a/templates/winner.html
+++ b/templates/winner.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="/static/winner.css">
 </head>
 <body>
-    <h1>Winner! {{winner.username}}</h1>
-    <h2>Scoreboard: </h2>
+    <h1>Final Scoreboard: </h1>
     <ul>
         {% for p in players%}
         <li>
