--- a/static/login.css
+++ b/static/login.css
@@ -113,13 +113,43 @@ button{
     margin-top: 10%;
     width: 200px;
     height: 50px;
-    background-color: #f90505;
-    border: 4px solid black;
+    background-color: #ff914d;
+    border: 2px solid black;
     border-radius: 3rem;
     margin-left: 200px;
     margin-top: 50px;
     font:bolder;
 
+}
+
+.form-row{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1rem;
+}
+
+.form-row label{
+    margin-bottom: 0.3rem;
+    font-weight: 600;
+}
+
+.form-row input {
+    padding: 0.5rem 0.75rem;
+    font-size: 1rem;
+}
+
+.login-container{
+    max-width: 420px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.login-container form {
+    width: 300px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
 }
 
 .falling-bg {
