Revamped falling ingredients
Only applied to login, signup, and dashboard

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,18 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My App{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
-    <!-- Welcome message -->
-    <!-- <div class="topbar">
-        <div class="welcome-message">
-            {% if current_user.is_authenticated %}
-                <p>Welcome, {{ current_user.name }}!</p>
-            {% endif %}
-        </div>
-    </div> -->
+    {% block falling_bg %}{% endblock %}
 
-    <!-- Render Flash messages -->
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             <ul class="flashes">
@@ -27,5 +21,7 @@
     {% endwith %}
 
     {% block content %}{% endblock %}
+    
+    {% block extra_js %}{% endblock %}
 </body>
 </html>
