--- a/templates/login.html
+++ b/templates/login.html
@@ -8,20 +8,21 @@
     <body>
         {% extends "base.html" %}
         {% block title %}Login{% endblock %}
-        {% block content %}
 
+        {% block extra_css %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='login.css') }}">
+        {% endblock %}
+    
+        {% block falling_bg %}
+        <div class="falling-bg" id="falling-bg"></div>
+        {% endblock %}
+
+        {% block content %}
         <img class="logo" src="/static/pantrypaniclogo.png">
         <div class="container">
             <div class="login-text">
                 <h1>Login Page</h1>
             </div>
-
-            <div class="falling-bg">
-                <div class="ingredient">🍅</div>
-                <div class="ingredient">🥦</div>
-                <div class="ingredient">🧀</div>
-            </div>
-            
 
             <form method="POST" action="{{url_for('login')}}">
                 <p class="login-detail"> Username</p>
@@ -33,6 +34,49 @@
             
             <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
         </div>
+        {% endblock %}
+
+        {% block extra_js %}
+        <script>
+            const container = document.getElementById('falling-bg');
+            const ingredients = [
+                '🍎','🍏','🍐','🍊','🍋','🍌','🍉','🍇','🍓','🍈','🍒','🍑','🫐','🍍','🥭','🥥','🥝','🍅',
+                '🥦','🥬','🥒','🌶️','🫑','🌽','🥕','🫒','🧄','🧅','🥔','🍠','🍆','🥑','🌱','🍄','🫘',
+                '🍗','🥩','🍖','🐟','🦪','🦐','🦑','🥚','🐔',
+                '🧀','🧈','🧂','🥛',
+                '🍞','🥖','🥐','🥨','🍚','🍙','🍘','🥙','🥮','🍝','🍜','🍛','🥟',
+                '🍯','🍫','🍬','🥧','🧁','🍩','🍪','🥜','🌰'
+                ];
+            const MAX_INGREDIENTS = 25;
+
+            function spawnIngredient() {
+                if (!container) return;
+                if (container.children.length >= MAX_INGREDIENTS) return;
+
+                const el = document.createElement('div');
+                el.classList.add('ingredient');
+                el.textContent = ingredients[Math.floor(Math.random() * ingredients.length)]; 
+                el.style.left = Math.random() * 100 + 'vw'; // hori position
+                const size = 1.4 + Math.random() * 10.6; // random size 1.2 - 3 rem
+                el.style.fontSize = size + 'rem';
+                const duration = 6 + Math.random() * 4; // random fall duration 6-10 sec
+                el.style.animationDuration = duration + 's';
+                el.style.animationDelay = '0s';
+
+                container.appendChild(el);
+                setTimeout(() => el.remove(), (duration + 1) * 1000);   // cleanup
+            }
+
+            // spawn every 400 - 900 ms
+            function loop() {
+                spawnIngredient();
+                const next = 400 + Math.random() * 500;
+                setTimeout(loop, next);
+            }
+
+            loop();
+            
+        </script>
         {% endblock %}
     </body>
 </html>
