--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
                 <button class="login-button" type="submit"> Log In</button>
             </form>
             
-            <p>Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
+            <p class="signup-detail">Don't have an account? <a href="{{ url_for('signup') }}">Sign up</a></p>
         </div>
         {% endblock %}
 
